--- a/frontend/ndw-traffic-signs/src/index.html
+++ b/frontend/ndw-traffic-signs/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-traffic-signs></app-traffic-signs>
+  <map></map>
 </body>
 </html>
